--- a/lecture_03_accessibility/index.html
+++ b/lecture_03_accessibility/index.html
@@ -4,26 +4,30 @@
   <meta charset="UTF-8" >
   <meta name="author" content="INFO 340">
   <title>HTML &amp; CSS Demo</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+    <main>
+    <div class="about-section">
+      <h1>INFO 340</h1>
+      <p>Client Side Web Development</p>
 
-  <h1>INFO 340</h1>
-  <p>Client Side Web Development</p>
+      <h2>About The Course</h2>
+      <p>This course will teach you the skills and techniques necessary for creating sophisticated and accessible interactive web applications. Upon completing this course, students will be able to build robust web applications, and will have the foundation for independently learning new skills in the ever-changing world of web development.</p>
+    </div>
+    <p>
+      <img src="img/busy-spider-icon.png" alt="An image of a spider, because this is WEB development, and we like puns">
+    </p>
 
-  <h2>About The Course</h2>
-  <p>This course will teach you the skills and techniques necessary for creating sophisticated and accessible interactive web applications. Upon completing this course, students will be able to build robust web applications, and will have the foundation for independently learning new skills in the ever-changing world of web development.</p>
-
-  <p>
-    <img src="img/busy-spider-icon.png">
-  </p>
-
-  <h2>Some links</h2>
-  <ul>
-    <li>Canvas Page <a href="https://canvas.uw.edu/courses/1719809">link</a></li>
-    <li>INFO 340 textbook <a href="https://info340.github.io/">link</a></li>
-    <li>iSchool homepage <a href="https://ischool.uw.edu">link</a></li>
-    <li>Also visit <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">here</a></li>
-  </ul>
+    <h2>Some links</h2>
+    <ul>
+      <li tabindex="3">Canvas Page <a href="https://canvas.uw.edu/courses/1719809">link</a></li>
+      <li tabindex="1">INFO 340 textbook <a href="https://info340.github.io/">link</a></li>
+      <li tabindex="0">iSchool homepage <a href="https://ischool.uw.edu">link</a></li>
+      <li tabindex="2">Also visit <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">here</a></li>
+    </ul>
+  </main>
+  <footer>Here is a footer!</footer>
 
 </body>
 </html>
