--- a/lecture_04-css-selectors/review.html
+++ b/lecture_04-css-selectors/review.html
@@ -16,7 +16,7 @@
     <p class="success">Success!</p>
   </section>
 
-  <section>
+  <!-- <section>
     <div class="first">
       <p>I am not green</p>
       <p class="second">I am green</p>  
@@ -30,6 +30,6 @@
     <div id="red" class="green">
       <p class="blue">Hello world!</p>
     </div>
-  </section>
+  </section> -->
 </body>
 </html>
