--- a/lecture_05-css-flexbox/center.html
+++ b/lecture_05-css-flexbox/center.html
@@ -5,5 +5,6 @@
 <body>
     <div class="container">
         <div class="element">CENTER ME</div>
+        <div class="element">CENTER ME</div>
     </div>
 </body>
