--- a/lecture_05-css-flexbox/center.html
+++ b/lecture_05-css-flexbox/center.html
@@ -6,5 +6,6 @@
     <div class="container">
         <div class="element">CENTER ME</div>
         <div class="element">CENTER ME</div>
+        <div class="element">CENTER ME</div>
     </div>
 </body>
