--- a/lecture_06-css-responsive-frameworks/bootstrap/index.html
+++ b/lecture_06-css-responsive-frameworks/bootstrap/index.html
@@ -3,20 +3,11 @@
 <head>
   <meta charset="UTF-8" >
   <meta name="author" content="INFO 340">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <title>Demo: INFO 340 Home Page (Bootstrap)</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900" rel="stylesheet">
-  
-  <!-- Load bootstrap css -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
-  <!-- load bootstrap js -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="container">
+<body>
 
   <nav>
     <ul>
@@ -27,11 +18,11 @@
     </ul>
   </nav>
 
-  <header class="text-white p-2 p-md-5">
+  <header>
     <h1>INFO 340</h1>
     <p>Client Side Web Development</p>
     <p>
-      <a href="http://getbootstrap.com/" class="btn btn-light">Built with Bootstrap</a>
+      <a href="http://getbootstrap.com/">Built with Bootstrap</a>
     </p>
   </header>
 
@@ -48,39 +39,32 @@
     <section class="topics-section">
       <h2>Technologies Learned</h2>
       <p>
-        <button class="btn btn-outline-success"
-                data-bs-toggle="collapse"
-                data-bs-target="#cardBoxCollapse"
-                aria-expanded="false" 
-                aria-controls="cardBoxCollapse">
-                Hide All</button>
+        <button>Hide All</button>
       </p>
-      <div class="collapse" id="cardBoxCollapse">
-        <div class="card-box d-sm-flex" >
-          <div>
-            <img src="img/html-icon.png" alt="html 5 logo">
-            <h3>Hypertext Markup Language</h3>
-          </div>
+      <div class="card-box">
+        <div>
+          <img src="img/html-icon.png" alt="html 5 logo">
+          <h3>Hypertext Markup Language</h3>
+        </div>
 
-          <div>
-            <img src="img/css-icon.png" alt="css 3 logo">
-            <h3>Cascading Style Sheets </h3>
-          </div>
+        <div>
+          <img src="img/css-icon.png" alt="css 3 logo">
+          <h3>Cascading Style Sheets </h3>
+        </div>
 
-          <div>
-            <img src="img/js-icon.png" alt="javascript logo">
-            <h3>JavaScript</h3>
-          </div>
+        <div>
+          <img src="img/js-icon.png" alt="javascript logo">
+          <h3>JavaScript</h3>
+        </div>
 
-          <div>
-            <img src="img/react-icon.png" alt="react logo">
-            <h3>React</h3>
-          </div>
+        <div>
+          <img src="img/react-icon.png" alt="react logo">
+          <h3>React</h3>
+        </div>
 
-          <div>
-            <img src="img/firebase-icon.png" alt="firebase logo">
-            <h3>Firebase</h3>
-          </div>
+        <div>
+          <img src="img/firebase-icon.png" alt="firebase logo">
+          <h3>Firebase</h3>
         </div>
       </div>
 
