--- a/lecture_07_javascript/index.html
+++ b/lecture_07_javascript/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>JavaScript Demo</title>
 
-  <!--ADD YOUR JAVASCRIPT LINK!!!-->
+  <!--ADD YOUR JAVASCRIPT SCRIPT LINK!!!-->
 
   <!-- Bootstrap for styling -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
