--- a/lecture_07_javascript/index.html
+++ b/lecture_07_javascript/index.html
@@ -5,6 +5,7 @@
   <title>JavaScript Demo</title>
 
   <!--ADD YOUR JAVASCRIPT SCRIPT LINK!!!-->
+  <script src="index.js"></script>
 
   <!-- Bootstrap for styling -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
