random number button

--- a/lecture_08_functional_javascript/index.html
+++ b/lecture_08_functional_javascript/index.html
@@ -11,6 +11,9 @@
 <body class="container">
     <h1>JavaScript Demo</h1>
     <p>Open the <a href="https://developers.google.com/web/tools/chrome-devtools/console/" target="_blank">Developer Console</a> to see output.</p>
+    
+    <button onclick="buttonOne()">I am a button!</button>
+    
     <div id="pretendUserInput" class="text-white-50 bg-dark">I like the color red!</div>
     <div id="resultsDiv"></div>
     <!--ADD YOUR JAVASCRIPT SCRIPT LINK!!!-->
