--- a/lecture_08_functional_javascript/index.html
+++ b/lecture_08_functional_javascript/index.html
@@ -12,7 +12,8 @@
     <h1>JavaScript Demo</h1>
     <p>Open the <a href="https://developers.google.com/web/tools/chrome-devtools/console/" target="_blank">Developer Console</a> to see output.</p>
     
-    <button onclick="buttonOne()">I am a button!</button>
+    <button onclick="buttonOne()">Button 1</button>
+    <button onclick="buttonTwo()">Button 2</button>
     
     <div id="pretendUserInput" class="text-white-50 bg-dark">I like the color red!</div>
     <div id="resultsDiv"></div>
