--- a/lecture_09_dom/index.html
+++ b/lecture_09_dom/index.html
@@ -15,6 +15,7 @@
 	</header>
 
 	<main>
+		<p>Cute puppy section is next!</p>
 		<section id="puppySection" class="my-3">
 			<h2>A Puppy</h2>
 			<div>
