first class demo getting react to work

--- a/lecture_11_react_intro/index.html
+++ b/lecture_11_react_intro/index.html
@@ -6,7 +6,15 @@
     <title>React Intro</title>
   </head>
   <body>
+    <!-- <h1>Header now exists!</h1> -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      // const msgElem = document.createElement('h1')
+      // msgElem.id = "hello";
+      // msgElem.classList.add('myClass');
+      // msgElem.textContent = 'Hello World from index.html!';
+      // document.getElementById('root').appendChild(msgElem)
+    </script>
   </body>
 </html>
